front-end/src/assets/css/general.css
/* ... */
.bg-2-stretch .slide-2-frame {
  /* border: 10px solid red; */
  display: block;
  margin-right: 80px;

}

.bg-2-stretch .slide-2-frame .text {
  margin-bottom: 200px;
}

.bg-2-stretch .slide-2-frame .text p {
  font-size: 2vw;
  line-height: 30px;
  letter-spacing: 0.6px;
  word-spacing: 20px;


}


.bg-2-stretch .slide-2-frame .text .slide-title {
  font-family: 'GTEestiDisplay-Medium',-apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 500;
  font-size: 4vw;
  /* border: 1px solid red; */
  padding-bottom: 20px;


}

.bg-2-stretch .slide-2-frame .text p {
  padding-top: 5px;
  font-size: 1vw;
  opacity: .5;
  font-family: 'GTEestiDisplay-Medium',-apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 500;
  color: rgb(46, 37, 37);
  word-spacing: 1px;
  line-height: 20px;


}

.bg-stretch .slide-frame .text p {
  padding-top: 5px;
  font-size: 1vw;
  color: black;

  /* color: gray;
  opacity: .5; */
  font-family: 'GTEestiDisplay-Medium',-apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 500;

}


.intro-section .bg-stretch {
	width: 100%;
    /* height: 100vh; */
    background-image: url("../images/finalhero.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    
}

.intro-section .bg-2-stretch {
	  width: 100%;
    background-image: url("../images/compguy.png");
    background-size: cover;
    background-repeat: no-repeat;
    /* background-position: 50% 50%; */
    
}
    /* background-image: url("../images/iphonex_bg.png"); */

@media (max-width: 375px) {
  /* .intro-section .bg-stretch {
    background-size: contain;
    width: 100%;
  

  } */

  .anchor-wrap {
    padding-bottom: 50px;
  }
}

@media (max-width: 768px) {

  .intro-section .bg-stretch {
    /* background-image: url("../images/finalhero_ipad3.png"); */
    /* background-image: url("../images/ipadhero.png"); */
    background-image: url("../images/finalhero_ipad3.png");

  }

  .intro-section .bg-2-stretch {
    /* background-image: url("../images/finalhero_ipad3.png"); */
    /* background-image: url("../images/ipadhero.png"); */
    background-image: url("../images/compguy_ipad.png");
    /* background-position: contain; */


  }

  .intro-section .bg-2-stretch {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    margin: 0 auto;
  }
  

  .bg-2-stretch .slide-2-frame .text {
    margin-left: 80px;
    padding-left: 50px;
    padding-right: 50px;
    padding-bottom: 10px;
    margin-top: -30px;
    justify-content: center;
    align-items: center;
  
    }

    .bg-2-stretch .slide-2-frame .text {

    }

  .bg-2-stretch .slide-2-frame .text .slide-title {
    font-size: 5.8vw;

    }


 
  .anchor-wrap {
    margin-bottom: 40px;
  }
  

}

@media (max-width: 1024px) {
  .intro-section .bg-stretch {
    background-image: url("../images/finalhero_ipad3.png");
    /* /background-image: url("../images/finalhero_ipadpro.png"); */ 
     height: auto; 
    width: auto;
    margin: 0 auto; 


  }

  .intro-section .bg-stretch-2 {
    /* height: auto; 
    width: auto; */
    background-size: contain;
    /* background-position: 50% 50%; */
    background-image: url("../images/compguyipadpro.png");

  }

 

  .bg-stretch {
    align-items: flex-start;
    justify-content: center;
    padding-top: 85px;
  }

    .slide-frame .text .slide-title {
    font-size: 6.5vw;
  } 


  .bg-2-stretch .slide-2-frame .text p {
    color: gray;
    font-size: 1.7vw;
  }

  .bg-2-stretch {
    align-items: flex-start;
    justify-content: center;
    padding-top: 100px;
  }

    .slide-2-frame .text .slide-title {
    font-size: 6vw;
  } 

  .bg-stretch .slide-frame .text p {
    color: gray;
    font-size: 1.7vw;
  }

  .bg-2-stretch .slide-2-frame .text p {
    color: black;
    font-size: 1.7vw;
  }
  
  


}

/* 
.HeroGroup {
  margin: 0 auto;
  text-align: center;
  width: 100%;
  height: 100%;
  border: 1px solid red;
} */

@media (max-width: 1023px) {
  .intro-section {
		padding-top: 50px;
	}

}

@media (max-width: 479px) {
  /* .intro-section {
		min-height: 60vw;
		padding-top: 40px;
  } */

  .intro-section .bg-stretch {
    /* background-image: url("../images/finaliphone678.png"); */
    background-image: url("../images/ipadhero.png");
    background-size: contain;


  }

  .bg-stretch .slide-frame .text {
    padding: 15px;
  
  }

  .bg-stretch .slide-frame .text .slide-title {
    font-size: 7.3vw;
  }

  .bg-stretch .slide-frame .text p {
    padding-top: 10px;
    font-size: 2.5vw;
  }

  .bg-2-stretch .slide-2-frame .text p {
    padding-top: 10px;
    font-size: 2.5vw;
  }

/*   
  .intro-section .slide-frame .text h1 {
    display:none;
  }

  .intro-section .slide-frame .text p {
    display:none;

  } */
  
  /* .intro-section .slide-frame .text button {
    display:none;

  } */
  .anchor-wrap {
    margin-bottom: 100px;
  }

  


}

.jumbo {
  width: 100%;
  height: 920px;
  background-size: contain;
  background-repeat: no-repeat;

  background-position: center;
}

.intro-section .bg-stretch p {
  font-size: 1.4vw;
  font-weight: 1200;
}
/* ... */

